--- a/travel-mgrsite/pom.xml
+++ b/travel-mgrsite/pom.xml
@@ -9,6 +9,7 @@
         <version>1.0.0</version>
     </parent>
 
+    <groupId>org.example</groupId>
     <artifactId>travel-mgrsite</artifactId>
 
     <properties>
