--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,16 @@
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>3.4.0</version>
             </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>0.9.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>2.0.23</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
