--- a/travel-common/travel-common-redis/pom.xml
+++ b/travel-common/travel-common-redis/pom.xml
@@ -18,6 +18,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.travel.lpz</groupId>
+            <artifactId>travel-common-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
