jwt登录优化,常量抽取,模块抽取。                目的地api及服务

--- a/travel-common/pom.xml
+++ b/travel-common/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>travel-common-core</module>
         <module>travel-common-redis</module>
+        <module>travel-common-auth</module>
     </modules>
     <dependencies>
         <dependency>
