--- a/travel-modules-api/travel-article-api/pom.xml
+++ b/travel-modules-api/travel-article-api/pom.xml
@@ -9,13 +9,20 @@
         <version>1.0.0</version>
     </parent>
 
-    <groupId>org.example</groupId>
     <artifactId>travel-article-api</artifactId>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <!--        该依赖只在编译和测试时期生效，运行是不生效。
+                        阻止依赖的传递性-->
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
