--- a/travel-modules-api/pom.xml
+++ b/travel-modules-api/pom.xml
@@ -9,13 +9,20 @@
         <version>1.0.0</version>
     </parent>
 
-    <groupId>org.example</groupId>
+    <groupId>com.travel.lpz</groupId>
     <artifactId>travel-modules-api</artifactId>
     <packaging>pom</packaging>
 
     <description>所有微服务子模块的api父模块，管理api所需依赖</description>
     <modules>
         <module>travel-users-api</module>
+        <module>travel-article-api</module>
+        <module>travel-article-api</module>
     </modules>
-
+<dependencies>
+    <dependency>
+        <groupId>com.travel.lpz</groupId>
+        <artifactId>travel-common-core</artifactId>
+    </dependency>
+</dependencies>
 </project>
