--- a/travel-modules/travel-users-server/src/main/resources/bootstrap.yml
+++ b/travel-modules/travel-users-server/src/main/resources/bootstrap.yml
@@ -10,6 +10,6 @@ spring:
         # 额外拉去注册中心的配置文件
         shared-configs:
           - data-id: redis-dev.yaml
-
+          - data-id: jwt-dev.yaml
   profiles:
     active: dev
