--- a/travel-modules/travel-article-server/pom.xml
+++ b/travel-modules/travel-article-server/pom.xml
@@ -18,9 +18,25 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>com.travel.lpz.redis</groupId>
+            <artifactId>travel-common-redis</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.17</version>
+        </dependency>
+        <dependency>
             <groupId>com.travel.lpz</groupId>
             <artifactId>travel-common-auth</artifactId>
             <version>1.0.0</version>
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>com.travel.lpz</groupId>-->
+<!--                    <artifactId>travel-users-api</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -30,5 +46,11 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
     </dependencies>
 </project>
