目的地概况

--- a/travel-common/travel-common-core/pom.xml
+++ b/travel-common/travel-common-core/pom.xml
@@ -14,6 +14,10 @@
         <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-            </dependency>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
     </project>
