--- a/travel-modules/travel-article-server/src/main/resources/bootstrap.yml
+++ b/travel-modules/travel-article-server/src/main/resources/bootstrap.yml
@@ -13,3 +13,10 @@ spring:
           - data-id: jwt-dev.yaml
   profiles:
     active: dev
+qiniuyun:
+  upload:
+    AccessKey: xxx
+    SecretKey: xxx
+    BucketName: xxx
+    Mkdir: xxx
+    url: xxx
