--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,17 @@
                 <artifactId>fastjson2</artifactId>
                 <version>2.0.23</version>
             </dependency>
+<!--            七牛云-->
+            <dependency>
+                <groupId>com.qiniu</groupId>
+                <artifactId>qiniu-java-sdk</artifactId>
+                <version>7.13.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.12.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
