--- a/travel-modules-api/travel-article-api/pom.xml
+++ b/travel-modules-api/travel-article-api/pom.xml
@@ -28,5 +28,13 @@
                         阻止依赖的传递性-->
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
 </project>
