--- a/travel-modules-api/travel-article-api/pom.xml
+++ b/travel-modules-api/travel-article-api/pom.xml
@@ -26,7 +26,7 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <!--        该依赖只在编译和测试时期生效，运行是不生效。
                         阻止依赖的传递性-->
-            <scope>provided</scope>
+<!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>com.qiniu</groupId>
@@ -35,6 +35,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.travel.lpz</groupId>
+            <artifactId>travel-users-api</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
