--- a/travel-modules/travel-article-server/pom.xml
+++ b/travel-modules/travel-article-server/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.example</groupId>
+        <groupId>com.travel.lpz</groupId>
         <artifactId>travel-modules</artifactId>
         <version>1.0.0</version>
     </parent>
@@ -31,12 +31,12 @@
             <groupId>com.travel.lpz</groupId>
             <artifactId>travel-common-auth</artifactId>
             <version>1.0.0</version>
-<!--            <exclusions>-->
-<!--                <exclusion>-->
-<!--                    <groupId>com.travel.lpz</groupId>-->
-<!--                    <artifactId>travel-users-api</artifactId>-->
-<!--                </exclusion>-->
-<!--            </exclusions>-->
+            <exclusions>
+                <exclusion>
+                    <groupId>com.travel.lpz</groupId>
+                    <artifactId>travel-users-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
