--- a/travel-modules/travel-data-server/pom.xml
+++ b/travel-modules/travel-data-server/pom.xml
@@ -11,10 +11,16 @@
 
     <artifactId>travel-data-server</artifactId>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.travel.lpz</groupId>
+            <artifactId>travel-article-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+    </dependencies>
 </project>
